--- a/src/MenuContent.latte
+++ b/src/MenuContent.latte
@@ -1,9 +1,12 @@
 {snippet content}
-    {foreach $listMenu as $menu}
-        <a n:href="SelectMenu! $menu['id']" n:class="$menu['id']==$idMenu?active, ajax">{$menu['name']}</a><br>
-    {/foreach}
-
-    {foreach $listContent as $content}
-        {$content['content']|noescape}
-    {/foreach}
+    <div class="nette-menu-nav">
+        {foreach $listMenu as $menu}
+            <a n:href="SelectMenu! $menu['id']" n:class="$menu['id']==$idMenu?active, ajax">{$menu['name']}</a>
+        {/foreach}
+    </div>
+    <div class="nette-menu-content">
+        {foreach $listContent as $content}
+            {$content['content']|noescape}
+        {/foreach}
+    </div>
 {/snippet}
